# LoreGenerator

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.dab44a4
resource/names/: FemaleArabic.txt  FemaleBreton.txt  FemaleDwarven.txt  FemaleElven.txt  FemaleGermanic.txt  MaleArabic.txt  MaleBreton.txt  MaleDwarven.txt  MaleElven.txt  MaleGermanic.txt
resource/names/female/: Beinian.txt  Dwarven.txt  Elven.txt  Fishman.txt  Halfling.txt  Halforc.txt  Irvisian.txt  Nortkin.txt  Qualtian.txt  Quarite.txt  Taikonian.txt  Tiefling.txt  Vitean.txt
resource/names/male/: Beinian.txt  Dwarven.txt  Elven.txt  Fishman.txt  Halfling.txt  Halforc.txt  Irvisian.txt  Nortkin.txt  Qualtian.txt  Quarite.txt  Taikonian.txt  Tiefling.txt  Vitean.txt
resource/npc/: Jobs.txt  jobs.txt
resource/settlement/jobs/: castle.txt  hugecity.txt  largecity.txt  mediumcity.txt  outpost.txt  smalltown.txt  village.txt
resource/settlement/roots/: Arabic.txt  Dwarven.txt  Latin.txt
resource/settlement/topoformants/: Arabic.txt  Breton.txt  Dwarven.txt  Germanic.txt
resource/surnames/: Arabic.txt  Beinian.txt  Breton.txt  Dwarven.txt  Elven.txt  Fishman.txt  Germanic.txt  Halfling.txt  Halforc.txt  Irvisian.txt  Nortkin.txt  Qualtian.txt  Quarite.txt  Taikonian.txt  Tiefling.txt  Vitean.txt
resource/titles/: Any.txt
src/: enumssingleton.cpp  enumssingleton.h  loregenerator.cpp  loregenerator.h  main.cpp
src/generation/: generator.cpp  generator.h  personsgen.cpp  personsgen.h  personsgenerator.cpp  personsgenerator.h  settlementgenerator.cpp  settlementgenerator.h
src/objects/: contry.cpp  contry.h  family.cpp  family.h  job.cpp  job.h  person.cpp  person.h  settlement.cpp  settlement.h  utils.cpp  utils.h
src/writer/: latexwriter.cpp  latexwriter.h  writerworker.cpp  writerworker.h
